--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             id="account-balance"
             class="text-[#111111B3] font-semibold text-sm lg:text-lg"
           >
-            5500 BDT
+            10000 BDT
           </p>
         </div>
       </div>
@@ -62,8 +62,9 @@
     </nav>
 
     <main>
+        <!-- cards section -->
       <section id="donation-section" class="space-y-8 mb-20">
-        <!-- card 1 -->
+        <!-- card one -->
         <div
           class="lg:mx-24 mx-8 border p-5 rounded-lg flex flex-col sm:flex-row sm:justify-center gap-5"
         >
@@ -75,7 +76,7 @@
               class="flex justify-center items-center gap-1 bg-[#d8d5d596] sm:max-w-36 h-12 rounded-lg px-2 py-5 mb-5"
             >
               <img class="" src="assets/coin.png" alt="" />
-              <p><span id="donate-balance-noakhali">00</span> BDT</p>
+              <p><span id="donate-balance-noakhali">500</span> BDT</p>
             </div>
             <h2 id="h2-noakhali" class="text-lg font-bold">
               Donate for Flood at Noakhali, Bangladesh
@@ -104,7 +105,7 @@
           </div>
         </div>
 
-        <!-- card 2 -->
+        <!-- card two -->
         <div
           class="lg:mx-24 mx-8 border p-5 rounded-lg flex flex-col sm:flex-row sm:justify-center gap-5"
         >
@@ -116,7 +117,7 @@
               class="flex justify-center items-center gap-1 bg-[#d8d5d596] sm:max-w-36 h-12 rounded-lg px-2 py-5 mb-5"
             >
               <img class="" src="assets/coin.png" alt="" />
-              <p><span id="donate-balance-feni">600</span> BDT</p>
+              <p><span id="donate-balance-feni">900</span> BDT</p>
             </div>
             <h2 class="text-lg font-bold">
               Donate for Flood at Feni, Bangladesh
@@ -147,7 +148,7 @@
           </div>
         </div>
 
-        <!-- card 3 -->
+        <!-- card three -->
         <div
           class="lg:mx-24 mx-8 border p-5 rounded-lg flex flex-col sm:flex-row sm:justify-center gap-5"
         >
@@ -159,7 +160,7 @@
               class="flex justify-center items-center gap-1 bg-[#d8d5d596] sm:max-w-36 h-12 rounded-lg px-2 py-5 mb-5"
             >
               <img class="" src="assets/coin.png" alt="" />
-              <p><span id="donate-balance-qouta">1600</span> BDT</p>
+              <p><span id="donate-balance-qouta">1000</span> BDT</p>
             </div>
             <h2 class="text-lg font-bold">
               Aid for Injured in the Quota Movement.
