--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>assignment-5</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.13/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -34,7 +34,7 @@
                       <input type="radio" name="my-accordion-2" checked="checked" />
                       <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
                       <div class="collapse-content">
-                        <p>The Document Object Model (DOM) is a structured representation of an HTML document. It organizes the document as a tree of objects (nodes), allowing JavaScript to interact with, modify, and update content, structure, and styles dynamically.
+                        <p>The Document Object Model (DOM) is a programming interface for web documents. It represents the structure of an HTML or XML document as a tree of objects, where each object corresponds to a part of the document, such as an element, attribute, or piece of text. The DOM allows programming languages (like JavaScript) to interact with, manipulate, and change the content, structure, and style of web pages dynamically.
                         </p>
                       </div>
                   </div>
